# graph-generation

./: CMakeLists.txt  README.md
custom_graphs/: irreducible  seminar_3  seminar_4  star  triangle
include/: DJGraphTy.hpp  DominanceFrontierTy.hpp  DominanceTreeTy.hpp  GraphDumpTy.hpp  GraphTy.hpp  NodeTy.hpp  ReducibleGraphTy.hpp  Utils.hpp
includes/: NodeTy.hpp  ReducibleGraphTy.hpp
lib/: CMakeLists.txt  DJGraphTy.cpp  DominanceFrontierTy.cpp  DominanceTreeTy.cpp  GraphDumpTy.cpp  NodeTy.cpp  ReducibleGraphTy.cpp  main.cpp
tools/: CMakeLists.txt
tools/custom/: main.cpp
tools/generation/: main.cpp
